# notification-service-proof-of-concept

./: README.md  pyproject.toml
src/: client.py  main.py
