[tool.poetry]
name = "notification-service-proof-of-concept"
version = "0.1.0"
description = ""
authors = ["Gregor Grasselli <g.grasselli@blocktrade.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
mypy = "^0.782"
flake8 = "^3.8.3"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
